<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/english_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_english">
        </RadioButton>

        <RadioButton
            android:id="@+id/malay_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_malay">
        </RadioButton>

        <RadioButton
            android:id="@+id/chinese_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_chinese">
        </RadioButton>

        <RadioButton
            android:id="@+id/tamil_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_tamil">
        </RadioButton>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OK" />

    </LinearLayout>

</LinearLayout>