<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textSize="20dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:background="@drawable/app_icon" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="500dp"
                android:hint="@string/email"
                android:paddingTop="50dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="500dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20dp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="500dp"
                android:text="@string/login" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>