<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_account"
        android:textSize="20dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_teacher_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/profile_profile"></ImageView>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/camera_teacher_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_camera"></ImageView>

                <ImageView
                    android:id="@+id/photo_teacher_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_photo"></ImageView>

            </LinearLayout>

            <EditText
                android:id="@+id/name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="500dp"
                android:hint="@string/name"
                android:paddingTop="50dp"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="500dp"
                android:hint="@string/email"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="500dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/verify_password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="500dp"
                android:hint="@string/verify_password"
                android:inputType="textPassword"
                android:textSize="20dp" />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="500dp"
                android:text="@string/sign_up" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>