<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageview1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="AAC Trainer + COMMUNICATOR 1.0"
            android:textColor="#000000"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/first_col"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/level1_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/label_modeling_level1"
                android:textColor="#000000"
                android:textSize="@dimen/main_button_text_size" />

            <Button
                android:id="@+id/change_language_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/label_change_language"
                android:textColor="#000000"
                android:textSize="@dimen/main_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_col"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/level2_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/label_modeling_level2"
                android:drawableLeft="@android:drawable/ic_lock_lock"
                android:textColor="#000000"
                android:textSize="@dimen/main_button_text_size" />

            <Button
                android:id="@+id/change_level_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:text="@string/label_change_level"
                android:textColor="#000000"
                android:textSize="@dimen/main_button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_col"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/level3_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/label_modeling_level3"
                android:drawableLeft="@android:drawable/ic_lock_lock"
                android:textColor="#000000"
                android:textSize="@dimen/main_button_text_size" />

            <Button
                android:id="@+id/about_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/label_about"
                android:textColor="#000000"
                android:textSize="@dimen/main_button_text_size"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
