<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textSize="30dp"
                android:textStyle="bold">

            </TextView>

            <ImageView
                android:id="@+id/profile_teacher_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/profile_profile"></ImageView>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/camera_teacher_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_camera"></ImageView>

                <ImageView
                    android:id="@+id/photo_teacher_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_photo"></ImageView>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_teacher"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLength="30" />

            <EditText
                android:id="@+id/age_teacher"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                android:id="@+id/category_teacher"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:hint="Kategori"
                android:maxLength="30" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:textSize="30dp"
                android:textStyle="bold">

            </TextView>

            <ImageView
                android:id="@+id/profile_student_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/profile_profile"></ImageView>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/camera_student_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_camera"></ImageView>

                <ImageView
                    android:id="@+id/photo_student_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/profile_photo"></ImageView>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_student"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLength="30" />

            <EditText
                android:id="@+id/age_student"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="3" />

            <EditText
                android:id="@+id/category_student"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:hint="Kategori"
                android:maxLength="30" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>

